Se agregaron todas las activities que se necesitaran, ademas de que se corrigieron errores menores de la estructura de la BD

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Ccure</string>
+    <string name="entrar">Entrar</string>
+    <string name="escribe_tu_numero_de_empleado">Escribe tu numero de empleado</string>
 </resources>
