--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <resources>
-    <string name="app_name">Ccure</string>
+    <string name="app_name">CCURE</string>
     <string name="entrar">Entrar</string>
     <string name="escribe_tu_numero_de_empleado">Escribe tu numero de empleado</string>
+    <string name="olvid_mi_tarjeta">Olvidé mi tarjeta</string>
+    <string name="favor_de_pasar_la_tarjeta_por_el_lector_para_iniciar_sesi_n">Favor de pasar la tarjeta por el lector para iniciar sesión</string>
 </resources>
