--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,12 @@
     <string name="escribe_tu_numero_de_empleado">Escribe tu numero de empleado</string>
     <string name="olvid_mi_tarjeta">Olvidé mi tarjeta</string>
     <string name="favor_de_pasar_la_tarjeta_por_el_lector_para_iniciar_sesi_n">Favor de pasar la tarjeta por el lector para iniciar sesión</string>
+    <string name="checadas">Checadas</string>
+    <string name="sincronizar_informaci_n">Sincronizar información</string>
+    <string name="cerrar_sesi_n">Cerrar sesión</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
