--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">CCURE</string>
+    <string name="app_name">CCURE MÓVIL</string>
     <string name="entrar">Entrar</string>
     <string name="escribe_tu_numero_de_empleado">Escribe tu numero de empleado</string>
     <string name="olvid_mi_tarjeta">Olvidé mi tarjeta</string>
@@ -12,4 +12,22 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="guardar">Guardar</string>
+    <string name="puerta">Puerta</string>
+    <string name="url_exportaci_n">URL Exportación</string>
+    <string name="dispositivo">Dispositivo</string>
+    <string name="webservice">WebService</string>
+    <string name="sincronizaci_n">Sincronización</string>
+    <string name="selecciona_una_opci_n_para_exportar_la_informaci_n">Selecciona una opción para exportar la información:</string>
+    <string name="red">Red</string>
+    <string name="archivo">Archivo</string>
+
+
+    <string-array name="items">
+        <item>Item 1</item>
+        <item>Item 2</item>
+        <item>Item 3</item>
+        <item>Item 4</item>
+        <item>Item 5</item>
+    </string-array>
 </resources>
