Se quitaron todos los warnings de las activities

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,8 @@
     <string name="app_name">CCURE MÓVIL</string>
     <string name="entrar">Entrar</string>
     <string name="escribe_tu_numero_de_empleado">Escribe tu numero de empleado</string>
-    <string name="olvid_mi_tarjeta">Olvidé mi tarjeta</string>
+    <string name="olvid_mi_tarjeta">Olvidé tarjeta</string>
+    <string name="ingresar_tarjeta">Ingresar con tarjeta</string>
     <string name="favor_de_pasar_la_tarjeta_por_el_lector_para_iniciar_sesi_n">Favor de pasar la tarjeta por el lector para iniciar sesión</string>
     <string name="checadas">Checadas</string>
     <string name="sincronizar_informaci_n">Sincronizar información</string>
