--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,9 @@
     <string name="app_name">CCURE MÓVIL</string>
     <string name="entrar">Entrar</string>
     <string name="escribe_tu_numero_de_empleado">Ingresa tu número de empleado</string>
-    <string name="olvide_mi_tarjeta"> <u> Olvidé tarjeta </u> </string>
+    <string name="olvide_mi_tarjeta">
+        <u> Olvidó tarjeta </u>
+    </string>
     <string name="ingresar_tarjeta"><u> Ingresar con tarjeta </u> </string>
     <string name="favor_de_pasar_la_tarjeta_por_el_lector_para_iniciar_sesi_n">Favor de pasar la tarjeta por el lector para iniciar sesión</string>
     <string name="checadas">Checadas</string>
